k8s/stacks/core-docs/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: docs
  labels:
    app.kubernetes.io/name: docs
    app.kubernetes.io/part-of: quatrain-community
