k8s/stacks/core-docs/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-docs
  namespace: docs
  labels:
    app.kubernetes.io/name: core-docs
    app.kubernetes.io/part-of: quatrain-community
    app.kubernetes.io/component: documentation
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: core-docs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: core-docs
        app.kubernetes.io/part-of: quatrain-community
        app.kubernetes.io/component: documentation
    spec:
      containers:
        - name: core-docs
          image: ghcr.io/quatrain/core-docs:develop
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /core/
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /core/
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 2
