k8s/stacks/core-docs/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: core-docs
  namespace: docs
  labels:
    app.kubernetes.io/name: core-docs
    app.kubernetes.io/part-of: quatrain-community
    app.kubernetes.io/component: documentation
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: core-docs
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
